# aoc2018

./: .gitignore
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/benches/: bench.rs
day2/src/: lib.rs  run.rs
day3/: Cargo.toml
day3/benches/: bench.rs
day3/src/: lib.rs  run.rs
day4/benches/: bench.rs
day4/src/: lib.rs  run.rs
day5/: Cargo.toml
day5/src/: run.rs
day6/: Cargo.toml
day6/src/: run.rs
