[package]
name = "aoc"
version = "0.1.0"
authors = ["Lars Andersson <larsand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#scan_fmt = "0.2.3"
#lazy_static = "1.4.0"
#regex = "1.3.1"
#chrono = "0.4.2"
itertools = "0.9.0"

[dev-dependencies]
bencher = "0.1.5"

#[[bench]]
#name = "bench"
#harness = false

[[bin]]
name = "run"
path = "src/run.rs"
